# Panorama-depth

./: .gitattributes  .gitignore  README.md  annotated_data.py  cmds.sh  criteria.py  dataset.py  environment.yml  exp_diff_list.py  mean_shift.py  metrics.py  modules.py  network.py  omnidepth_trainer.py  prediction.py  run_experiments.py  run_utils.py  test.py  test_criteria.py  test_omnidepth.py  train.py  train_omnidepth.py  trainers.py  unit_test.py  util.py  visualizations.py
data_splits/: list_best_False.txt  mono_points_p100_d20_test.txt  original_p100_d20_test_split.txt  original_p100_d20_test_split_top50.txt  original_p500_d10_test_split.txt  original_stanford_test.txt  original_stanford_train.txt  original_test_split.txt  panodepth_real_test.txt  panodepth_render_test.txt  panodepth_smooth_worse.txt  panodepth_test.txt  robust_exp_stitched_train.txt  robust_exp_test.txt
genDataset/: add_points_column.py  agument_rotation.py  colapse_planes.py  convert_matterport.py  convert_rendered_matterport.py  convert_stanford.py  dataset.py  exr_to_tiff.py  file_generator.py  findOutliers.py  gen_normals_planes.py  gen_sparse_points.py  test.py  utils.py
genDataset/data_spliting/: dataset.py  file_generator.py  findOutliers.py
genDataset/matterport_panos/: CMakeLists.txt  cvMat_plugin.h  main.cpp
genDataset/plane_normal_extraction/: CMakeLists.txt  segmentation.cpp
genDataset/test/: 13_area_11_planes_0_Left_Down_0.0.tiff  1_area_11_planes_0_Left_Down_0.0.tiff
test/: test_split.txt
